refactor: rename user-id to id in routes and handlers.
