# docs/swagger.json
@@ -154,10 +154,11 @@
                 }
             }
         },
-        "/users/{user-id}/download-segments-history": {
+        "/users/{id}/download-segments-history": {
             "get": {
                 "produces": [
-                    "text/csv json"
+                    "text/csv",
+                    "application/json"
                 ],
                 "tags": [
                     "users"
@@ -167,7 +168,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "user-id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -205,7 +206,7 @@
                 }
             }
         },
-        "/users/{user-id}/segments": {
+        "/users/{id}/segments": {
             "get": {
                 "tags": [
                     "users"
@@ -215,7 +216,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "user-id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -256,7 +257,7 @@
                     {
                         "type": "string",
                         "description": "User ID",
-                        "name": "user-id",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -341,10 +342,10 @@
         "internal_httpserver_handlers_users_get.Response": {
             "type": "object",
             "properties": {
-                "user-id": {
+                "id": {
                     "type": "integer"
                 },
-                "user-segments": {
+                "segments": {
                     "type": "array",
                     "items": {
                         "type": "string"
